# YouRAG

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: benchmark.yml  ci.yml
docker/: postgres-init.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODEBASE_GUIDE.md  DEPLOYMENT.md  FEATURE_IDEAS.md  ROADMAP.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppSidebar.tsx  ChatPanel.tsx  Sidebar.tsx  VideoPanel.tsx
frontend/lib/: api.ts  collections-context.tsx  perf-store.ts  types.ts
monitoring/: loki.yml  prometheus.yml  promtail.yml
scripts/: build_graph.py  preload_models.py  test_ingestion.py  test_rag.py  test_retrieval.py  test_summarizer.py
src/api/: auth.py  main.py
src/cache/: semantic_cache.py
src/core/: config.py  database.py  langfuse_client.py  logger.py  postgres.py  redis_client.py  utils.py
src/models/: chat.py
src/schema/: models.py
src/ui/: app.py
tests/: run_benchmark.py
tests/benchmark/: benchmark_vs_baseline.py  dataset.json
tests/integration/: test_graph_rag_real.py  test_real_pipeline.py
tests/unit/: conftest.py  test_answer_generator.py  test_api.py  test_chat_models.py  test_chunker.py  test_config.py  test_contextual_compressor.py  test_contextual_enricher.py  test_cross_encoder.py  test_dataset_generator.py  test_dense_search.py  test_frame_extractor.py  (+20 more)
(+31 files in other folders)
