[tool.poetry]
name = "yourag"
version = "0.1.0"
description = "YouTube RAG system with hybrid retrieval, reranking, and summarization"
authors = ["td041"]
readme = "README.md"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.110.0"
uvicorn = "0.29.0"
pydantic = ">=2.7.0"
pydantic-settings = "2.2.1"
python-dotenv = "1.2.2"
redis = "5.0.3"
youtube-transcript-api = "1.2.4"
pytubefix = "10.3.8"
requests = ">=2.32.2"
groq = "1.0.0"
openai = "1.14.2"
rank-bm25 = "0.2.2"
sentence-transformers = "2.6.1"
httpx = "<0.28.0"
qdrant-client = "^1.17.1"
fastembed = "^0.7.4"
sqlmodel = "^0.0.18"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
networkx = ">=3.0"

[tool.poetry.group.evaluation.dependencies]
zenml = {extras = ["server"], version = "^0.94.0"}
ragas = "^0.4.3"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
langchain-openai = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
pytest-asyncio = "0.23.6"
ruff = "0.3.4"
mypy = "1.9.0"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
